fix: delete collapsible in collapsed mode

--- a/packages/carbon-blocks/src/style.styl
+++ b/packages/carbon-blocks/src/style.styl
@@ -255,3 +255,7 @@ span {
 	color #aaa
 	cursor: pointer
 	line-height: 32px
+[data-name="collapsible"][data-collapsed="true"]
+	.collapsible-empty-content,
+	[data-type="children"]
+		display: none
